# binary-optimizers

./: .gitignore  cifar10_swarm_results.txt  dynamic_swarm_results.txt  logic_benchmark_results.txt  mnist_improved_report.md  mnist_report.md  pyproject.toml  refined_swarm_results.txt  test_debug.py
binary_optimizers/: __init__.py  binarization.py  cli.py
binary_optimizers/benchmarks/: __init__.py  cifar10.py  fit_training.py  inference_bench.py  mnist.py  new_optimizer_report.py  pareto.py  reporting.py  training_sweep.py
binary_optimizers/data/: __init__.py  cifar10.py  mnist.py
binary_optimizers/inference/: __init__.py  binary_linear.py  extract.py  packing.py
binary_optimizers/models/: __init__.py  bit_layers.py  cifar.py  logic_layers.py  mnist.py  swarm_layers.py  swarm_logic.py
binary_optimizers/optimizers/: __init__.py  bitlogic.py  cosine_voting.py  ema_flip.py  hybrid_accumulator.py  hybrid_v2.py  integrate_fire.py  logic_optimizer.py  signum.py  sparse_sign.py  ste.py  swarm.py  (+3 more)
docs/: END_TO_END_SUMMARY.md  FIT_TRAINING_ANALYSIS.md  IMPROVEMENT_PROPOSALS.md  README.md  SPARSE_SIGN_MAX_FIT.md  networks.md  optimizers.md
experiments/: Benchmarking Voting Optimizer vs STE on CIFAR-10.md  benchmark_cifar10.py  benchmark_mnist.py  run_benchmark_checkpoints.py  run_cifar10_swarm.py  run_fit_training.py  run_full_pipeline.py  run_inference_benchmark.py  run_logic_comparison.py  run_mnist_comparison.py  run_pareto_analysis.py  run_swarm_dynamic_comparison.py  run_training_sweep.py
results/: SUMMARY.md  checkpoint_benchmark.md  fit_sparse_sign_e40_report.md  fit_training_report.md  inference_benchmark.md  new_optimizers_report.md  pareto_analysis.md
tests/: conftest.py  test_binary_linear.py  test_checkpoints.py  test_memory_profiler.py  test_new_optimizers.py  test_packing.py  test_pareto.py
(+7 files in other folders)
